PCI: tegra: Allow building as a module
Signed-off-by: Thierry Reding <treding@nvidia.com>

--- a/drivers/pci/host/Kconfig
+++ b/drivers/pci/host/Kconfig
@@ -31,7 +31,7 @@ config PCI_IMX6
 	select PCIE_DW
 
 config PCI_TEGRA
-	bool "NVIDIA Tegra PCIe controller"
+	tristate "NVIDIA Tegra PCIe controller"
 	depends on ARCH_TEGRA && !ARM64
 	help
 	  Say Y here if you want support for the PCIe host controller found
