--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -178,6 +178,7 @@ config PINCTRL_TEGRA210
 
 config PINCTRL_TEGRA_XUSB
 	def_bool y if ARCH_TEGRA
+	depends on MAILBOX
 	select GENERIC_PHY
 	select PINCONF
 	select PINMUX
