arm64: tegra: Add Tegra210 support
NVIDIA Tegra210 (also known as Tegra X1) has four Cortex-A57 and four
Cortex-A53 CPUs. Compared to Tegra124 and Tegra132 it comes with a 256-
core Maxwell GPU. It supports processing videos of up to 4K resolutions
at 60 fps (H.265, VP9, H.264).

Signed-off-by: Thierry Reding <treding@nvidia.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -227,6 +227,15 @@ config ARCH_TEGRA_132_SOC
 	  but contains an NVIDIA Denver CPU complex in place of
 	  Tegra124's "4+1" Cortex-A15 CPU complex.
 
+config ARCH_TEGRA_210_SOC
+	bool "NVIDIA Tegra210 SoC"
+	depends on ARCH_TEGRA
+	select PINCTRL_TEGRA210
+	select USB_ULPI if USB_PHY
+	select USB_ULPI_VIEWPORT if USB_PHY
+	help
+	  Enable support for the NVIDIA Tegra210 SoC.
+
 config ARCH_SPRD
 	bool "Spreadtrum SoC platform"
 	help
