WIP: arm64: tegra: Add Tegra210 soctherm support
Signed-off-by: Thierry Reding <treding@nvidia.com>

--- a/arch/arm64/boot/dts/nvidia/tegra210.dtsi
+++ b/arch/arm64/boot/dts/nvidia/tegra210.dtsi
@@ -5,6 +5,7 @@
 #include <dt-bindings/pinctrl/pinctrl-tegra-xusb.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/power/tegra-powergate.h>
+#include <dt-bindings/thermal/tegra210-soctherm.h>
 
 / {
 	compatible = "nvidia,tegra210";
