soc/tegra: Add KFUSE support
The KFUSE module found on NVIDIA Tegra SoCs stores encrypted HDCP keys
which are used to protect audio/video content over an HDMI or DP link.

Signed-off-by: Thierry Reding <treding@nvidia.com>

--- a/drivers/soc/tegra/Makefile
+++ b/drivers/soc/tegra/Makefile
@@ -1,4 +1,5 @@
 obj-$(CONFIG_ARCH_TEGRA) += fuse/
 
 obj-$(CONFIG_ARCH_TEGRA) += common.o
+obj-$(CONFIG_ARCH_TEGRA) += kfuse.o
 obj-$(CONFIG_ARCH_TEGRA) += pmc.o
