CHROMIUM: arm64: Create Image.fit
Manually applied from some commit in the Chromium repository...

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -61,6 +61,9 @@ boot := arch/arm64/boot
 Image Image.gz: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
+Image.fit: Image
+	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
+
 zinstall install: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $@
 
