ARM64: tegra: Smaug support

--- a/arch/arm64/boot/Makefile
+++ b/arch/arm64/boot/Makefile
@@ -14,6 +14,10 @@
 # Based on the ia64 boot/Makefile.
 #
 
+DTB_OBJS = \
+	$(obj)/dts/nvidia/tegra210-smaug-p0.dtb \
+	$(obj)/dts/nvidia/tegra210-smaug-p1.dtb
+
 targets := Image Image.gz Image.fit
 
 $(obj)/Image: vmlinux FORCE
