--- a/arch/arm64/boot/dts/nvidia/Makefile
+++ b/arch/arm64/boot/dts/nvidia/Makefile
@@ -1,6 +1,8 @@
 dtb-$(CONFIG_ARCH_TEGRA) += tegra132-norrin.dtb
 dtb-$(CONFIG_ARCH_TEGRA) += tegra210-p2371-e01.dtb
 dtb-$(CONFIG_ARCH_TEGRA) += tegra210-p2571-e01.dtb
+dtb-$(CONFIG_ARCH_TEGRA) += tegra210-smaug-p0.dtb
+dtb-$(CONFIG_ARCH_TEGRA) += tegra210-smaug-p1.dtb
 
 always		:= $(dtb-y)
 clean-files	:= *.dtb
